# PocketFlow-Rust

./: .gitignore  Cargo.toml  README.md
.cursor/rules/: 001-how_to_use.mdc
.github/workflows/: publish.yml
examples/: basic.rs
examples/pocketflow-rs-rag/: Cargo.toml  README.md
examples/pocketflow-rs-rag/src/: lib.rs  main.rs  state.rs
examples/pocketflow-rs-rag/src/nodes/: chunk_documents.rs  create_index.rs  embed_documents.rs  embed_query.rs  file_loader.rs  generate_answer.rs  mod.rs  query_rewrite.rs  retrieve_document.rs
examples/text2sql/: .gitignore  Cargo.toml
examples/text2sql/example_data/: customers.csv  orders.csv
examples/text2sql/src/: flow.rs  main.rs
src/: context.rs  error.rs  flow.rs  lib.rs  node.rs
src/utils/: embedding.rs  llm_wrapper.rs  mod.rs  text_chunking.rs  vector_db.rs  viz_debug.rs  web_search.rs
